# create-project

./: .env.example  .gitignore  .pre-commit-config.yaml  BUILD-PLAN.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE-REPORT.md  README.md  TODO-1.5.md  TODO-MILESTONE-6.md  TODO.md  analyze_coverage.py  benchmark_results.json  logger.py  pyproject.toml  requirements-perf.txt  research-analysis.md  spec.md  test_integration_debug.py
.claude/: settings.local.json
.claude/sessions/: .current-session  2025-01-16-1647-Build 2.1 Design Template Schema.md  2025-01-17-1457-check-error-messages-and-warnings.md  2025-01-21-1045-Build-2.5-Test-Template-System.md  2025-01-21-1047.md  2025-01-21-1430-Build-2.6-Create-License-Templates-Repository.md  2025-01-21-1537-Build Milestone 3: Core Project Generation Logic.md  2025-07-16-1431-Planning phase.md  2025-07-16-1458-Create detailed TODO for section 1.1 Initialize Project Structure.md  2025-07-16-1615-Initialisation.md  2025-07-16-1617-Discovery phase.md  2025-07-16-1641-Update SPEC.md  2025-07-16-1646-Build section 1.1.md  2025-07-16-1646-Build section 1.2 Configure Project Dependencies.md  2025-07-16-1646-Build section 1.3 Set Up Logging Infrastructure.md  2025-07-16-1646-Build section 1.4 Create Configuration Management System.md  2025-07-16-1831-Build section 1.5 Set Up Development Environment.md  2025-07-17-0747-Investigate Github Workflow Actions error messages.md  2025-07-18-1821-Resume work on Build 2.1 to finish.md  2025-07-21-1530-Build 2.2 Implement Template Engine.md  2025-07-21-1615-Milestone 4 Ollama AI Integration.md  2025-07-21-1643-Build 2.3 Create Built-in Templates.md
.github/workflows/: build.yml  integration-tests.yml  integration.yml  lint.yml  performance.yml  test.yml
create_project/: __init__.py  __main__.py  main.py
create_project/ai/: README.md  __init__.py  ai_service.py  cache_manager.py  context_collector.py  exceptions.py  model_manager.py  ollama_client.py  ollama_detector.py  prompt_manager.py  response_generator.py  types.py
create_project/ai/templates/: error_help.j2  explanation.j2  generic_help.j2  suggestions.j2
create_project/config/: __init__.py  config_manager.py  defaults.json  logging.yaml  models.py  settings.json  settings.schema.json
create_project/core/: __init__.py  api.py  api_enhanced.py  command_executor.py  directory_creator.py  error_recovery.py  exceptions.py  file_renderer.py  git_manager.py  path_utils.py  progress.py  project_generator.py  threading_model.py  venv_manager.py
create_project/gui/: __init__.py  app.py
create_project/gui/dialogs/: __init__.py  ai_help.py  error.py  performance_dialog.py  recovery_dialog.py  settings.py
create_project/gui/steps/: __init__.py  basic_info.py  location.py  (+3 more)
create_project/licenses/: __init__.py  manager.py  models.py
create_project/resources/: __init__.py  icons.py  styles.py
create_project/templates/: __init__.py  engine.py  loader.py  renderers.py  validator.py
create_project/templates/builtin/template_files/common/: gitignore.txt.j2  pyproject.toml  pyproject.toml.j2  readme.md.j2
create_project/utils/: __init__.py  logger.py  performance.py  structure_validator.py
docs/: AI_CONFIGURATION.md  gui_architecture.md  logging.md  user_guide.md
docs/developer/: setup.md
docs/performance/: benchmarks.md  tuning_guide.md
docs/research/: template-systems-analysis.md
docs/templates/: authoring-guide.md  current-structure-analysis.md  schema-specification.md
docs/testing/: integration_testing.md  test_architecture.md
logs/: .gitkeep
scripts/: build.sh  dev-utils.sh  install-hooks.sh  package.sh  run-gui.ps1  run-gui.py  run-gui.sh  run-performance-tests.sh  setup-dev.ps1  setup-dev.sh  validate-env.py  validate_templates.py
tests/: __init__.py  test_logger.py
tests/ai/: __init__.py  conftest.py  fixtures.py  mocks.py  test_ai_service.py  test_cache_manager.py  test_context_collector.py  test_model_manager.py  test_ollama_client.py  test_ollama_detector.py  test_prompt_manager.py  test_response_generator.py
tests/config/: __init__.py  test_ai_config.py  test_config_manager.py  test_config_manager_gaps.py  test_models.py
tests/core/: test_api_enhanced.py
tests/gui/: __init__.py  conftest.py  test_ai_help_dialog.py  test_automation.py  test_basic_info_step.py  test_config_aware_widget.py  test_custom_widgets.py  test_error_dialog.py  test_integration.py  test_license_preview.py  test_location_step.py  test_options_step.py  test_progress_dialog.py  test_progress_dialog_enhanced.py  test_project_type_step.py  test_recovery_dialog.py  test_review_step.py  test_settings_dialog.py  test_step_validation.py  test_user_flows.py  test_wizard.py  test_wizard_generator_integration.py
tests/integration/: __init__.py  conftest.py  test_ai_error_handling.py  test_ai_integration.py  test_ai_integration_fixes.py  test_ai_project_generation.py  test_end_to_end.py  test_error_recovery_integration.py  test_generator_integration.py  test_gui_integration.py  test_integration_debug.py  test_license_integration.py  test_project_generation_e2e.py  test_simple_workflow.py  test_template_integration.py  test_templates.py  test_wizard_basic.py  test_workflows.py
tests/licenses/: __init__.py  test_manager.py  test_models.py
tests/performance/: __init__.py  benchmarks.py  conftest.py  test_config_performance.py  test_file_operations.py  test_generation_speed.py  test_memory_usage.py  test_template_performance.py  test_ui_responsiveness.py
tests/resources/: __init__.py  conftest.py  test_icons.py  test_styles.py
tests/scripts/: test_validate_templates.py
tests/security/: __init__.py  conftest.py  test_command_injection.py  test_command_injection_simple.py  test_input_validation.py  test_input_validation_simple.py  test_path_traversal.py  test_path_traversal_simple.py
tests/templates/: __init__.py  test_builtin_templates.py  test_engine.py  test_loader.py  test_renderers.py  test_validator.py
tests/unit/: __init__.py  test_error_recovery.py  test_imports.py  test_performance.py  test_progress_tracking.py  test_structure.py
(+89 files in other folders)
